syntax = "proto3";

package bevm;

option go_package = "dedis.ch/cothority/bevm";

message DeployRequest {
    uint64 GasLimit = 101;
    uint64 GasPrice = 102;
    uint64 Amount = 103;
    uint64 Nonce = 104;
    bytes Bytecode = 105;
    string Abi = 106; // JSON-encoded
    repeated string Args = 107; // JSON-encoded

}

message TransactionRequest {
    uint64 GasLimit = 101;
    uint64 GasPrice = 102;
    uint64 Amount = 103;
    bytes ContractAddress = 104;
    uint64 Nonce = 105;
    string Abi = 106; // JSON-encoded
    string Method = 107;
    repeated string Args = 108; // JSON-encoded
}

message TransactionHashResponse {
	bytes Transaction = 101;
	bytes TransactionHash = 102;
}

message TransactionFinalizationRequest {
	bytes Transaction = 101;
	bytes Signature = 102;
}

message TransactionResponse {
	bytes Transaction = 101;
}

message CallRequest {
	bytes BlockID = 101;
	string ServerConfig = 102;
	bytes BEvmInstanceID = 103;
	bytes AccountAddress = 104;
	bytes ContractAddress = 105;
	string Abi = 106; // JSON-encoded
	string Method = 107;
	repeated string Args = 108; // JSON-encoded
}

message CallResponse {
	string Result = 101; // JSON-encoded
}
